--- a/rest/api/templates/index.html
+++ b/rest/api/templates/index.html
@@ -1,1 +1,37 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><link rel="apple-touch-icon" sizes="76x76" href="/apple-icon.png"><!--[if IE]><link rel="icon" type="image/png" sizes="96x96" href="/favicon.png"><![endif]--><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title>Estuary Viewer</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"><link href="/js/chunk-2d219ff9.576870b4.js" rel="prefetch"><link href="/css/app.a4221311.css" rel="preload" as="style"><link href="/css/chunk-vendors.1d9bd05a.css" rel="preload" as="style"><link href="/js/app.7491e5d6.js" rel="preload" as="script"><link href="/js/chunk-vendors.a8ff014e.js" rel="preload" as="script"><link href="/css/chunk-vendors.1d9bd05a.css" rel="stylesheet"><link href="/css/app.a4221311.css" rel="stylesheet"><link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#344675"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="#344675"><meta name="apple-mobile-web-app-title" content="Estuary Viewer"><link rel="apple-touch-icon" href="/img/icons/apple-touch-icon-152x152.png"><link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#344675"><meta name="msapplication-TileImage" content="/img/icons/msapplication-icon-144x144.png"><meta name="msapplication-TileColor" content="#344675"></head><body><div id="app"></div><script src="/js/chunk-vendors.a8ff014e.js"></script><script src="/js/app.7491e5d6.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link href="/apple-icon.png" rel="apple-touch-icon" sizes="76x76">
+    <!--[if IE]>
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon.png"><![endif]-->
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <title>Estuary Viewer</title>
+    <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" name="viewport">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
+    <link href="/js/chunk-2d219ff9.576870b4.js" rel="prefetch">
+    <link as="style" href="/css/app.334cefcd.css" rel="preload">
+    <link as="style" href="/css/chunk-vendors.1d9bd05a.css" rel="preload">
+    <link as="script" href="/js/app.6008b732.js" rel="preload">
+    <link as="script" href="/js/chunk-vendors.bfe07d76.js" rel="preload">
+    <link href="/css/chunk-vendors.1d9bd05a.css" rel="stylesheet">
+    <link href="/css/app.334cefcd.css" rel="stylesheet">
+    <link href="/img/icons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="/img/icons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="/manifest.json" rel="manifest">
+    <meta content="#344675" name="theme-color">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="#344675" name="apple-mobile-web-app-status-bar-style">
+    <meta content="Estuary Viewer" name="apple-mobile-web-app-title">
+    <link href="/img/icons/apple-touch-icon-152x152.png" rel="apple-touch-icon">
+    <link color="#344675" href="/img/icons/safari-pinned-tab.svg" rel="mask-icon">
+    <meta content="/img/icons/msapplication-icon-144x144.png" name="msapplication-TileImage">
+    <meta content="#344675" name="msapplication-TileColor">
+</head>
+<body>
+<div id="app"></div>
+<script src="/js/chunk-vendors.bfe07d76.js"></script>
+<script src="/js/app.6008b732.js"></script>
+</body>
+</html>
